--- a/resources/css/custom.scss
+++ b/resources/css/custom.scss
@@ -1,8 +1,12 @@
+$primary-color: #eb8600;
+$secondary-color: #4b4b4d;
+$color-tosca: #00b7c0;
+
 body {  
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    color:blue !important;
     font-size: 1.25em !important;
+    background-color: #fff;
 }
 
 h1 {
@@ -28,6 +32,7 @@ h1 {
 .carousel-item {
   height: 32rem;
 }
+
 .carousel-item > img {
   position: absolute;
   top: 0;
@@ -35,68 +40,252 @@ h1 {
   min-width: 100%;
   height: 32rem;
 }
-  
-.skew-cc{
-  width:100%;
-  height:50px;
-  left:0px;
-  background: linear-gradient(to right bottom, orange 49%, #fff 50%), linear-gradient(-50deg, #ffffff 16px, #000 0);
-  background-size: 100% calc(100% + 2px);
-}
-
-.skew-cc-content {
-  background: #fff;
-  background-size: 100% calc(100% + 2px);
-  padding: 20px;
-  width: 100%;
-}
 
 .skew-c {
-  width:100%;
-  height:50px;
-  left:0px;
-  background: linear-gradient(to left bottom, #fff 49%, orange 50%);
-  background-size: 100% calc(100% + 2px);
-}
-
-.skew-c-content {
-    background: orange;
-    background-size: 100% calc(100% + 2px);
+  background: url('../assets/bg-orange.jpg');
+  .separator {
+    width:100%;
+    height:50px;
+    left:0px;
+    background: linear-gradient(to left bottom, #fff 49%, orange 50%);
+  }
+  .content{
     padding: 20px;
     width: 100%;
     border: 0;
-}
+    text-align: center;
+    color: #fff;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
 
-.divider {								/* minor cosmetics */
+  .divider {
     display: table; 
     font-size: 24px; 
     text-align: center; 
-    width: 75%; 						/* divider width */
-    margin: 40px auto;					/* spacing above/below */
+    width: 75%;
+    margin: 40px auto;
+
+    span { 
+        display: table-cell; 
+        position: relative; 
+    }
+
+    span:first-child, 
+    span:last-child {
+        width: 50%;
+        top: 20px;
+        background-size: 100% 2px;
+        background-position: 0 0, 0 100%;
+        background-repeat: no-repeat;
+        
+        &:first-child {
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#fff));
+          background-image: -webkit-linear-gradient(180deg, transparent, #fff);
+          background-image: -moz-linear-gradient(180deg, transparent, #fff);
+          background-image: -o-linear-gradient(180deg, transparent, #fff);
+          background-image: linear-gradient(90deg, transparent, #fff);
+        }
+
+        &:last-child {
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(transparent));
+          background-image: -webkit-linear-gradient(180deg, #fff, transparent);
+          background-image: -moz-linear-gradient(180deg, #fff, transparent);
+          background-image: -o-linear-gradient(180deg, #fff, transparent);
+          background-image: linear-gradient(90deg, #fff, transparent);
+        }
+    }
+
+    span:nth-child(2) {
+        color: #fff; 
+        padding: 0px 20px; 
+        width: auto; 
+        white-space: nowrap;
+    }
+  }
 }
-.divider span { display: table-cell; position: relative; }
-.divider span:first-child, .divider span:last-child {
-    width: 50%;
-    top: 20px;							/* adjust vertical align */
-    -moz-background-size: 100% 2px; 	/* line width */
-    background-size: 100% 2px; 			/* line width */
-    background-position: 0 0, 0 100%;
-    background-repeat: no-repeat;
+
+.skew-cc{
+  background: #fff;
+  .separator {
+    width:100%;
+    height:50px;
+    left:0px;
+    background: linear-gradient(to right bottom, orange 49%, #fff 50%), linear-gradient(-50deg, #ffffff 16px, #000 0);
+  }
+
+  .content {
+    padding: 20px;
+    width: 100%;
+    border: 0;
+    text-align: center;
+    color: #000;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
+
+  .divider {
+    display: table; 
+    font-size: 24px; 
+    text-align: center; 
+    width: 75%;
+    margin: 40px auto;
+
+    span { 
+        display: table-cell; 
+        position: relative; 
+    }
+
+    span:first-child, 
+    span:last-child {
+        width: 50%;
+        top: 20px;
+        background-size: 100% 2px;
+        background-position: 0 0, 0 100%;
+        background-repeat: no-repeat;
+        
+        &:first-child {
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#000));
+          background-image: -webkit-linear-gradient(180deg, transparent, #000);
+          background-image: -moz-linear-gradient(180deg, transparent, #000);
+          background-image: -o-linear-gradient(180deg, transparent, #000);
+          background-image: linear-gradient(90deg, transparent, #000);
+        }
+
+        &:last-child {
+          background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#000), to(transparent));
+          background-image: -webkit-linear-gradient(180deg, #000, transparent);
+          background-image: -moz-linear-gradient(180deg, #000, transparent);
+          background-image: -o-linear-gradient(180deg, #000, transparent);
+          background-image: linear-gradient(90deg, #000, transparent);
+        }
+    }
+
+    span:nth-child(2) {
+        color: #000; 
+        padding: 0px 20px; 
+        width: auto; 
+        white-space: nowrap;
+    }
+  }
 }
-.divider span:first-child {				/* color changes in here */
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#000));
-    background-image: -webkit-linear-gradient(180deg, transparent, #000);
-    background-image: -moz-linear-gradient(180deg, transparent, #000);
-    background-image: -o-linear-gradient(180deg, transparent, #000);
-    background-image: linear-gradient(90deg, transparent, #000);
+
+
+//our team
+    /* Flip animation */
+    .team-member:hover .team-info {
+      transform: rotateX(180deg);
+  }
+
+  /* Slide up animation */
+  /* Uncomment the code below and comment out the flip animation code if you prefer sliding up effect */
+
+  /*
+  .team-member .team-info {
+      transition: transform 0.5s ease;
+      transform: translateY(100%);
+  }
+
+  .team-member:hover .team-info {
+      transform: translateY(0);
+  }
+  */
+
+  /* Additional styles */
+  .team-info {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: #fff;
+      padding: 10px;
+      transform-style: preserve-3d;
+      backface-visibility: hidden;
+      transform: rotateX(-180deg);
+  }
+
+  .team-info h5,
+  .team-info p {
+      margin: 0;
+  }
+
+// Footer styles
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 50px 0;
+  
+  .footer-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-wrap: wrap;
+
+      .footer-section {
+          width: 25%;
+          margin-bottom: 20px;
+
+          h3 {
+              font-size: 20px;
+              margin-bottom: 15px;
+          }
+
+          ul {
+              list-style-type: none;
+              padding: 0;
+              margin: 0;
+
+              li {
+                  margin-bottom: 10px;
+              }
+          }
+      }
+
+      .social-media {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-top: 20px;
+
+          a {
+              margin: 0 10px;
+              color: #fff;
+              font-size: 20px;
+          }
+      }
+  }
 }
-.divider span:nth-child(2) {
-    color: #000; padding: 0px 20px; width: auto; white-space: nowrap;
-}
-.divider span:last-child {				/* color changes in here */
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#000), to(transparent));
-    background-image: -webkit-linear-gradient(180deg, #000, transparent);
-    background-image: -moz-linear-gradient(180deg, #000, transparent);
-    background-image: -o-linear-gradient(180deg, #000, transparent);
-    background-image: linear-gradient(90deg, #000, transparent);
-}
+
+
+// .divider {
+//     display: table; 
+//     font-size: 24px; 
+//     text-align: center; 
+//     width: 75%;
+//     margin: 40px auto;
+// }
+// .divider span { display: table-cell; position: relative; }
+// .divider span:first-child, .divider span:last-child {
+//     width: 50%;
+//     top: 20px;
+//     -moz-background-size: 100% 2px;
+//     background-size: 100% 2px;
+//     background-position: 0 0, 0 100%;
+//     background-repeat: no-repeat;
+// }
+// .divider span:first-child {
+//     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#fff));
+//     background-image: -webkit-linear-gradient(180deg, transparent, #fff);
+//     background-image: -moz-linear-gradient(180deg, transparent, #fff);
+//     background-image: -o-linear-gradient(180deg, transparent, #fff);
+//     background-image: linear-gradient(90deg, transparent, #fff);
+// }
+// .divider span:nth-child(2) {
+//     color: #fff; padding: 0px 20px; width: auto; white-space: nowrap;
+// }
+// .divider span:last-child {
+//     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#000), to(transparent));
+//     background-image: -webkit-linear-gradient(180deg, #000, transparent);
+//     background-image: -moz-linear-gradient(180deg, #000, transparent);
+//     background-image: -o-linear-gradient(180deg, #000, transparent);
+//     background-image: linear-gradient(90deg, #000, transparent);
+// }
