--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,9 @@
 
 // Custom Styles
 @import '../css/custom';
+
+// Line Icons
+@import '../css/lineicons';
+
+// Quill
+@import 'quill/dist/quill.snow.css';
