--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,3 +15,10 @@
 
 // Quill
 @import 'quill/dist/quill.snow.css';
+
+// Font Awesome
+@import '@fortawesome/fontawesome-free/css/all.css';
+
+// Slick Carousell
+@import 'slick-carousel/slick/slick.css';
+@import 'slick-carousel/slick/slick-theme.css';
